--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,5 +1,4 @@
 body {
-    text-align: center;
     background: url(images/stock-coffee-beans-by-unamanic.jpg);
     background-size: cover;
     background-position: center center;
@@ -7,13 +6,21 @@ body {
     background-attachment: fixed;
 }
 
-p {
+p, ul {
+    text-align: left;
     font-size: 3em;
     width: 75%;
     margin: auto;
     color: white;
     text-shadow: 2px 2px black;
     font-family: Helvetica;
+}
+
+img {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    text-align: center;
 }
 
 a {
