--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,19 +1,20 @@
 body {
-    background: url(images/stock-coffee-beans-by-unamanic.jpg);
-    background-size: cover;
-    background-position: center center;
-    background-repeat: no-repeat;
-    background-attachment: fixed;
+    background: AliceBlue;
+    font-family: 'Poppins', sans-serif;
+}
+
+h1 {
+    text-align: center;
+    font-size: 6vw;
+    line-height: 100%;
 }
 
 p, ul {
     text-align: left;
-    font-size: 3em;
+    font-size: 2vmax;
     width: 75%;
     margin: auto;
-    color: white;
-    text-shadow: 2px 2px black;
-    font-family: Helvetica;
+    color: DarkSlateGray;
 }
 
 img {
@@ -23,26 +24,23 @@ img {
     text-align: center;
 }
 
-a {
-    font-family: Helvetica;
-}
 /* unvisited link */
 
 a:link {
-    color: white;
+    color: DarkGray;
 }
 /* visited link */
 
 a:visited {
-    color: yellow;
+    color: DarkSlateGray;
 }
 /* mouse over link */
 
 a:hover {
-    color: yellow;
+    color: DarkSlateGray;
 }
 /* selected link */
 
 a:active {
-    color: yellow;
+    color: DarkSlateGray;
 }
